<resources>
    <string name="app_name">共通家計簿アプリ</string>

    <string name="home_title">ホーム</string>
    <string name="register_withdrawal_button">出金の登録</string>
    <string name="confirm_withdrawal_button">出金の確認</string>
    <string name="send_data_button">PCにデータを送信</string>

    <string name="register_withdrawal_title">出金登録</string>
    <string name="item">項目</string>
    <string name="price">料金</string>
    <string name="liquidation_date">清算日</string>
    <string name="payer">支払い者</string>
    <string name="comment">コメント</string>
    <string name="registration_button">登録</string>

    <string name="register_success">登録完了</string>
    <string name="register_failure">登録失敗</string>
    <string name="continue_registration_button">続けて\n登録する</string>
    <string name="return_home_button">ホーム\nに戻る</string>
    <string name="warning_message">入力してください</string>

    <string name="confirm_withdrawal_title">\n出金記録</string>
    <string name="prev_mouth_button">先月</string>
    <string name="next_mouth_button">来月</string>

    <string name="amount">合計金額</string>
    <string name="difference">差額</string>

    <string name="edit_withdrawal_title">出金編集</string>
    <string name="delete">削除</string>

    <string name="delete_withdrawal_title">出金削除</string>>
    <string name="delete_success">削除完了</string>
    <string name="delete_failure">削除失敗</string>
    <string name="return_confirm_button">確認画面\nに戻る</string>

</resources>