<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/confirm_withdrawal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="タイトル"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/prev_mouth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_mouth_button"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:onClick="onClickPrevMonthButton"
        android:layout_below="@id/confirm_withdrawal_title"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/next_mouth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_mouth_button"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:onClick="onClickNextMonthButton"
        android:layout_below="@id/confirm_withdrawal_title"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/payer_summaries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@id/prev_mouth_button"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/payer_summary_payer_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payer"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/payer_summary_amount_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/payer_summary_difference_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difference"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/payer_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/payer_summary_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/withdrawals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/payer_summaries"
        android:layout_marginTop="50dp"
        android:layout_above="@id/return_home_button"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/withdrawal_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_payer_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payer"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_liquidation_date_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liquidation_date"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_comment_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comment"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/withdrawal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/withdrawal_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/return_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home_button"
        android:textSize="17sp"
        android:onClick="onClickReturnHomeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>