<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_withdrawal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/edit_withdrawal_title"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/target_withdrawal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/edit_withdrawal_title"
        android:layout_marginTop="70dp"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    
            <TextView
                android:id="@+id/withdrawal_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_payer_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payer"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_liquidation_date_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liquidation_date"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_comment_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comment"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/withdrawal_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_payer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_liquidation_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:background="@drawable/grid_border" />

            <TextView
                android:id="@+id/withdrawal_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:background="@drawable/grid_border" />
    
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="24sp"
        android:onClick="onClickDeleteButton"
        android:layout_below="@id/target_withdrawal"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>