<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_withdrawal_title"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/continue_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_registration_button"
        android:textSize="17sp"
        android:onClick="onClickContinueRegistrationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <Button
        android:id="@+id/return_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home_button"
        android:textSize="17sp"
        android:onClick="onClickReturnHomeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"/>
</androidx.constraintlayout.widget.ConstraintLayout>